refactor: warning 해결
#158