@@ -126,30 +126,19 @@ class IntroductionQueryRepositoryTest {
             System.out.println("hobby Condition : " + condition.getHobbies());
 
             // then
-            if (fieldName.equals("excludedIds")) {
-                assertThat(result).containsExactly(member1.getId());
-            } else if (fieldName.equals("minAge")) {
-                assertThat(result).containsExactly(member2.getId());
-            } else if (fieldName.equals("maxAge")) {
-                assertThat(result).containsExactly(member1.getId());
-            } else if (fieldName.equals("hobbies")) {
-                assertThat(result).containsExactly(member1.getId());
-            } else if (fieldName.equals("religion")) {
-                assertThat(result).containsExactly(member1.getId());
-            } else if (fieldName.equals("cities")) {
-                assertThat(result).containsExactly(member1.getId());
-            } else if (fieldName.equals("smokingStatus")) {
-                assertThat(result).containsExactly(member1.getId());
-            } else if (fieldName.equals("drinkingStatus")) {
-                assertThat(result).containsExactly(member1.getId());
-            } else if (fieldName.equals("memberGrade")) {
-                assertThat(result).isEmpty();
-            } else if (fieldName.equals("gender")) {
-                assertThat(result).containsExactly(member1.getId());
-            } else if (fieldName.equals("joinedAfter")) {
-                assertThat(result).isEmpty();
-            } else {
-                assertThat(result).containsExactlyInAnyOrder(member1.getId(), member2.getId());
+            switch (fieldName) {
+                case "excludedIds" -> assertThat(result).containsExactly(member1.getId());
+                case "minAge" -> assertThat(result).containsExactly(member2.getId());
+                case "maxAge" -> assertThat(result).containsExactly(member1.getId());
+                case "hobbies" -> assertThat(result).containsExactly(member1.getId());
+                case "religion" -> assertThat(result).containsExactly(member1.getId());
+                case "cities" -> assertThat(result).containsExactly(member1.getId());
+                case "smokingStatus" -> assertThat(result).containsExactly(member1.getId());
+                case "drinkingStatus" -> assertThat(result).containsExactly(member1.getId());
+                case "memberGrade" -> assertThat(result).isEmpty();
+                case "gender" -> assertThat(result).containsExactly(member1.getId());
+                case "joinedAfter" -> assertThat(result).isEmpty();
+                default -> assertThat(result).containsExactlyInAnyOrder(member1.getId(), member2.getId());
             }
         }
     }
@@ -255,7 +244,7 @@ class IntroductionQueryRepositoryTest {
 
             // then
             assertThat(result).hasSize(1);
-            MemberIntroductionProfileQueryResult memberIntroductionProfileQueryResult = result.get(0);
+            MemberIntroductionProfileQueryResult memberIntroductionProfileQueryResult = result.getFirst();
             assertThat(memberIntroductionProfileQueryResult.memberId()).isEqualTo(introductionTargetMember.getId());
             assertThat(memberIntroductionProfileQueryResult.profileImageUrl()).isEqualTo(primaryProfileImage.getUrl());
             assertThat(memberIntroductionProfileQueryResult.hobbies()).containsExactlyInAnyOrder(hobby3.name(),
